Speed up parseUriParameters()
Pre-construct our default values and access query parameters only once.

Change-Id: Ice551e9c441e86711d7705bf40fe0f2670c0440a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>